<resources>
    <string name="app_name">NCC E-Payments</string>
    <string name="title_activity_recipts">Recipts</string>
    <string name="rescipt_amount">-KSH 2,000</string>
    <!-- Strings related to login -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="mpesa_push_message">A request to pay will be sent to your phone. Enter your MPESA PIN to complete the transaction</string>
    <string name="mpesa_message">
           1.Check your phone for push notification.\n
           2.Proceed with the instructions.\n
    </string>
    <string name="Manual_mpesa">

    </string>
    <string name="ncc_checkout">NCC Checkout</string>
    <string name="login_password_hint">Password</string>
    <string name="title_activity_seasonal_parking_reciept">SeasonalParkingReciept</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="required">Required</string>
    <string name="guest_user">Guest user</string>
    <string name="save">Save</string>
    <string name="toast_message_screenshot">First Take any Screenshot</string>
    <string name="toast_message_screenshot_success">Screenshot saved successfully.</string>
    <string name="settings_message">Go to Permissions to Grant Storage</string>
    <string name="payment_instructions">Payment Instructions</string>
    <string name="failed_to_complete_transaction">Failed to complete transaction!</string>
    <string name="ubp_portal"> <a href="http://epayments.nairobi.go.ke/">e payments Portal</a></string>
    <string name="stream_parkin">Parking</string>
    <string name="description">Daily parking payment</string>
    <string name="amount">KSH100.00</string>
    <string name="time">12:00 pm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search</string>
    <string name="title_activity_history_transactions">HistoryTransactions</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

</resources>
