<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#FDFDFD"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="301dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="#6B0404"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/failed_to_complete_transaction"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_instructions"
        android:textColor="#504F4F"
        android:textSize="18dp"

        android:fontFamily="@font/roboto_medium" />

    <TextView
        android:id="@+id/payment_instructions"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#504F4F"
        android:paddingLeft="10dp"
        android:text="@string/Manual_mpesa" />

</LinearLayout>